--- a/PAD_Laboratories_secondary/Ingredient-microservice/pom.xml
+++ b/PAD_Laboratories_secondary/Ingredient-microservice/pom.xml
@@ -26,8 +26,8 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -48,6 +48,32 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <from>
+                        <image>openjdk:17</image>
+                        <auth>
+                            <username>dbitca785</username>
+                            <password>Paroladocker</password>
+                        </auth>
+                    </from>
+                    <to>
+                        <image>dbitca785/recipe_service:tagname</image>
+                        <auth>
+                            <username>dbitca785</username>
+                            <password>Paroladocker</password>
+                        </auth>
+                    </to>
+                    <container>
+                        <ports>
+                            <port>8080</port>
+                        </ports>
+                    </container>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
