--- a/PAD_Laboratories_secondary/Ingredient-microservice/src/main/resources/application.properties
+++ b/PAD_Laboratories_secondary/Ingredient-microservice/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql = true
 server.port=8082
+server.address=192.168.0.69
 service.discovery.url=http://127.0.0.1:8001/
 spring.application.name=RecipeMicroservice
