--- a/PAD_Laboratories-main/Ingredient-microservice/src/main/resources/application.properties
+++ b/PAD_Laboratories-main/Ingredient-microservice/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql = true
 server.port=9191
+server.address=127.0.0.1
 service.discovery.url=http://127.0.0.1:8001/
 spring.application.name=IngredientMicroservice
