--- a/PAD_Laboratories-main/Ingredient-microservice/Dockerfile
+++ b/PAD_Laboratories-main/Ingredient-microservice/Dockerfile
@@ -1,9 +1,7 @@
+# Use an official Maven/Java runtime as a parent image
 FROM maven:3.8.3-openjdk-17 AS build
-COPY src PAD_Laboratories_main/Ingredient-microservice/src
-COPY pom.xml PAD_Laboratories_main/Ingredient-microservice/pom.xml
-
-RUN mvn -f PAD_Laboratories_main/Ingredient-microservice/pom.xml clean
-
-EXPOSE 9191
-
-ENTRYPOINT ["java","-jar","ingredientmicroservice.jar"]
+FROM openjdk:17-jdk-alpine
+ARG JAR_FILE=target/*.jar
+COPY ./target/Ingredient-microservice-0.0.1-SNAPSHOT.jar app.jar
+#EXPOSE 9191
+ENTRYPOINT ["java","-jar","/app.jar"]
