--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,8 @@ events {
 
 http {
   upstream ingredient_microservices {
-    server ingredient-microservice-1;
-    server ingredient-microservice-2;
+    server ingredient-microservice-1:9191;
+    server ingredient-microservice-2:9192;
   }
 
   upstream recipe_microservice {
@@ -13,6 +13,7 @@ http {
   }
 
   server {
+    listen [::]:80;
     listen 80;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -21,7 +22,7 @@ http {
 
     # Route requests to the /test endpoint in ingredient-microservice
     location / {
-      proxy_pass http://ingredient_microservices/;
+      proxy_pass http://ingredient_microservices;
     }
 
     # Add other locations for additional endpoints as needed
